// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with expenses correctly 1`] = `
<div>
  <h1>
    Viewing 5 expenses totaling $145.00
  </h1>
</div>
`;

exports[`should render ExpensesSummary with no expenses correctly 1`] = `
<div>
  <h1 />
</div>
`;
